--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     },
     "require-dev": {
         "workerman/webman": "^1.5.0",
-        "topthink/think-validate": "^2.0.2"
+        "topthink/think-validate": "^2.0.2",
+        "phpoffice/phpspreadsheet": "^1.28"
     },
     "autoload": {
         "psr-4": {
