--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
     ],
     "require": {
         "php": ">=8.1",
-        "ext-json": "*",
-        "workerman/webman-framework": "^1.5.0"
+        "ext-json": "*"
     },
     "require-dev": {
+        "workerman/webman-framework": "^1.5.0",
         "workerman/webman": "^1.5.0",
-        "topthink/think-validate": "^2.0.2",
+        "php-sword/sword-validate": "^1.0",
         "phpoffice/phpspreadsheet": "^1.28"
     },
     "autoload": {
