--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,9 @@
     "autoload": {
         "psr-4": {
             "sword\\": "src"
-        }
+        },
+        "files": [
+            "./src/helpers.php"
+        ]
     }
 }
